c-.output
Grammar

    0 $accept: program $end

    1 program: declarationList

    2 declarationList: declarationList declaration
    3                | declaration

    4 declaration: NUMCONST
    5            | BOOLCONST
    6            | CHARCONST
    7            | RECORD
    8            | STATIC
    9            | INT
   10            | CHAR
   11            | BOOL
   12            | IF
   13            | ELSE
   14            | AND
   15            | OR
   16            | NOT
   17            | WHILE
   18            | RETURN
   19            | DIV
   20            | STAR
   21            | ADD
   22            | MINUS
   23            | PERCENT
   24            | COMMA
   25            | ASSIGN
   26            | MULASS
   27            | INC
   28            | ADDASS
   29            | DEC
   30            | SUBASS
   31            | DIVASS
   32            | LTHAN
   33            | LESSEQ
   34            | EQ
   35            | NOTEQ
   36            | GTHAN
   37            | GRTEQ
   38            | QMARK
   39            | LPAREN
   40            | RPAREN
   41            | LCURLY
   42            | RCURLY
   43            | LBRACKET
   44            | RBRACKET
   45            | ID
   46            | DOT
   47            | COLON
   48            | SEMICOLON
   49            | ERROR


Terminals, with rules where they appear

$end (0) 0
error (256)
BOOLCONST (258) 5
NUMCONST (259) 4
ID (260) 45
CHARCONST (261) 6
RECORD (262) 7
STATIC (263) 8
INT (264) 9
CHAR (265) 10
BOOL (266) 11
IF (267) 12
ELSE (268) 13
AND (269) 14
OR (270) 15
NOT (271) 16
WHILE (272) 17
RETURN (273) 18
DIV (274) 19
STAR (275) 20
ADD (276) 21
MINUS (277) 22
PERCENT (278) 23
COMMA (279) 24
ASSIGN (280) 25
MULASS (281) 26
INC (282) 27
ADDASS (283) 28
DEC (284) 29
SUBASS (285) 30
DIVASS (286) 31
LTHAN (287) 32
LESSEQ (288) 33
EQ (289) 34
NOTEQ (290) 35
GTHAN (291) 36
GRTEQ (292) 37
QMARK (293) 38
LPAREN (294) 39
RPAREN (295) 40
LCURLY (296) 41
RCURLY (297) 42
LBRACKET (298) 43
RBRACKET (299) 44
COLON (300) 47
SEMICOLON (301) 48
DOT (302) 46
ERROR (303) 49


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
program (50)
    on left: 1, on right: 0
declarationList (51)
    on left: 2 3, on right: 1 2
declaration (52)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44
    45 46 47 48 49, on right: 2 3


State 0

    0 $accept: . program $end

    BOOLCONST  shift, and go to state 1
    NUMCONST   shift, and go to state 2
    ID         shift, and go to state 3
    CHARCONST  shift, and go to state 4
    RECORD     shift, and go to state 5
    STATIC     shift, and go to state 6
    INT        shift, and go to state 7
    CHAR       shift, and go to state 8
    BOOL       shift, and go to state 9
    IF         shift, and go to state 10
    ELSE       shift, and go to state 11
    AND        shift, and go to state 12
    OR         shift, and go to state 13
    NOT        shift, and go to state 14
    WHILE      shift, and go to state 15
    RETURN     shift, and go to state 16
    DIV        shift, and go to state 17
    STAR       shift, and go to state 18
    ADD        shift, and go to state 19
    MINUS      shift, and go to state 20
    PERCENT    shift, and go to state 21
    COMMA      shift, and go to state 22
    ASSIGN     shift, and go to state 23
    MULASS     shift, and go to state 24
    INC        shift, and go to state 25
    ADDASS     shift, and go to state 26
    DEC        shift, and go to state 27
    SUBASS     shift, and go to state 28
    DIVASS     shift, and go to state 29
    LTHAN      shift, and go to state 30
    LESSEQ     shift, and go to state 31
    EQ         shift, and go to state 32
    NOTEQ      shift, and go to state 33
    GTHAN      shift, and go to state 34
    GRTEQ      shift, and go to state 35
    QMARK      shift, and go to state 36
    LPAREN     shift, and go to state 37
    RPAREN     shift, and go to state 38
    LCURLY     shift, and go to state 39
    RCURLY     shift, and go to state 40
    LBRACKET   shift, and go to state 41
    RBRACKET   shift, and go to state 42
    COLON      shift, and go to state 43
    SEMICOLON  shift, and go to state 44
    DOT        shift, and go to state 45
    ERROR      shift, and go to state 46

    program          go to state 47
    declarationList  go to state 48
    declaration      go to state 49


State 1

    5 declaration: BOOLCONST .

    $default  reduce using rule 5 (declaration)


State 2

    4 declaration: NUMCONST .

    $default  reduce using rule 4 (declaration)


State 3

   45 declaration: ID .

    $default  reduce using rule 45 (declaration)


State 4

    6 declaration: CHARCONST .

    $default  reduce using rule 6 (declaration)


State 5

    7 declaration: RECORD .

    $default  reduce using rule 7 (declaration)


State 6

    8 declaration: STATIC .

    $default  reduce using rule 8 (declaration)


State 7

    9 declaration: INT .

    $default  reduce using rule 9 (declaration)


State 8

   10 declaration: CHAR .

    $default  reduce using rule 10 (declaration)


State 9

   11 declaration: BOOL .

    $default  reduce using rule 11 (declaration)


State 10

   12 declaration: IF .

    $default  reduce using rule 12 (declaration)


State 11

   13 declaration: ELSE .

    $default  reduce using rule 13 (declaration)


State 12

   14 declaration: AND .

    $default  reduce using rule 14 (declaration)


State 13

   15 declaration: OR .

    $default  reduce using rule 15 (declaration)


State 14

   16 declaration: NOT .

    $default  reduce using rule 16 (declaration)


State 15

   17 declaration: WHILE .

    $default  reduce using rule 17 (declaration)


State 16

   18 declaration: RETURN .

    $default  reduce using rule 18 (declaration)


State 17

   19 declaration: DIV .

    $default  reduce using rule 19 (declaration)


State 18

   20 declaration: STAR .

    $default  reduce using rule 20 (declaration)


State 19

   21 declaration: ADD .

    $default  reduce using rule 21 (declaration)


State 20

   22 declaration: MINUS .

    $default  reduce using rule 22 (declaration)


State 21

   23 declaration: PERCENT .

    $default  reduce using rule 23 (declaration)


State 22

   24 declaration: COMMA .

    $default  reduce using rule 24 (declaration)


State 23

   25 declaration: ASSIGN .

    $default  reduce using rule 25 (declaration)


State 24

   26 declaration: MULASS .

    $default  reduce using rule 26 (declaration)


State 25

   27 declaration: INC .

    $default  reduce using rule 27 (declaration)


State 26

   28 declaration: ADDASS .

    $default  reduce using rule 28 (declaration)


State 27

   29 declaration: DEC .

    $default  reduce using rule 29 (declaration)


State 28

   30 declaration: SUBASS .

    $default  reduce using rule 30 (declaration)


State 29

   31 declaration: DIVASS .

    $default  reduce using rule 31 (declaration)


State 30

   32 declaration: LTHAN .

    $default  reduce using rule 32 (declaration)


State 31

   33 declaration: LESSEQ .

    $default  reduce using rule 33 (declaration)


State 32

   34 declaration: EQ .

    $default  reduce using rule 34 (declaration)


State 33

   35 declaration: NOTEQ .

    $default  reduce using rule 35 (declaration)


State 34

   36 declaration: GTHAN .

    $default  reduce using rule 36 (declaration)


State 35

   37 declaration: GRTEQ .

    $default  reduce using rule 37 (declaration)


State 36

   38 declaration: QMARK .

    $default  reduce using rule 38 (declaration)


State 37

   39 declaration: LPAREN .

    $default  reduce using rule 39 (declaration)


State 38

   40 declaration: RPAREN .

    $default  reduce using rule 40 (declaration)


State 39

   41 declaration: LCURLY .

    $default  reduce using rule 41 (declaration)


State 40

   42 declaration: RCURLY .

    $default  reduce using rule 42 (declaration)


State 41

   43 declaration: LBRACKET .

    $default  reduce using rule 43 (declaration)


State 42

   44 declaration: RBRACKET .

    $default  reduce using rule 44 (declaration)


State 43

   47 declaration: COLON .

    $default  reduce using rule 47 (declaration)


State 44

   48 declaration: SEMICOLON .

    $default  reduce using rule 48 (declaration)


State 45

   46 declaration: DOT .

    $default  reduce using rule 46 (declaration)


State 46

   49 declaration: ERROR .

    $default  reduce using rule 49 (declaration)


State 47

    0 $accept: program . $end

    $end  shift, and go to state 50


State 48

    1 program: declarationList .
    2 declarationList: declarationList . declaration

    BOOLCONST  shift, and go to state 1
    NUMCONST   shift, and go to state 2
    ID         shift, and go to state 3
    CHARCONST  shift, and go to state 4
    RECORD     shift, and go to state 5
    STATIC     shift, and go to state 6
    INT        shift, and go to state 7
    CHAR       shift, and go to state 8
    BOOL       shift, and go to state 9
    IF         shift, and go to state 10
    ELSE       shift, and go to state 11
    AND        shift, and go to state 12
    OR         shift, and go to state 13
    NOT        shift, and go to state 14
    WHILE      shift, and go to state 15
    RETURN     shift, and go to state 16
    DIV        shift, and go to state 17
    STAR       shift, and go to state 18
    ADD        shift, and go to state 19
    MINUS      shift, and go to state 20
    PERCENT    shift, and go to state 21
    COMMA      shift, and go to state 22
    ASSIGN     shift, and go to state 23
    MULASS     shift, and go to state 24
    INC        shift, and go to state 25
    ADDASS     shift, and go to state 26
    DEC        shift, and go to state 27
    SUBASS     shift, and go to state 28
    DIVASS     shift, and go to state 29
    LTHAN      shift, and go to state 30
    LESSEQ     shift, and go to state 31
    EQ         shift, and go to state 32
    NOTEQ      shift, and go to state 33
    GTHAN      shift, and go to state 34
    GRTEQ      shift, and go to state 35
    QMARK      shift, and go to state 36
    LPAREN     shift, and go to state 37
    RPAREN     shift, and go to state 38
    LCURLY     shift, and go to state 39
    RCURLY     shift, and go to state 40
    LBRACKET   shift, and go to state 41
    RBRACKET   shift, and go to state 42
    COLON      shift, and go to state 43
    SEMICOLON  shift, and go to state 44
    DOT        shift, and go to state 45
    ERROR      shift, and go to state 46

    $default  reduce using rule 1 (program)

    declaration  go to state 51


State 49

    3 declarationList: declaration .

    $default  reduce using rule 3 (declarationList)


State 50

    0 $accept: program $end .

    $default  accept


State 51

    2 declarationList: declarationList declaration .

    $default  reduce using rule 2 (declarationList)
